--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="resume">
-        <img src="C:\Users\z4pro\OneDrive\Desktop\zaheer\images\resume.jpg"/>
+        <img src="resume.jpg"/>
     </div>
 </body>
 </html>
